kubernetes_helm/01_apps-without-helm/blue/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  selector:
    app: blue
  ports:
    - port: 80
